--- a/app/src/main/res/layout/custon_rv_assessment.xml
+++ b/app/src/main/res/layout/custon_rv_assessment.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="@string/country_text"
+                android:text="@string/country_text1"
                 android:textSize="14sp"
                 android:textColor="@color/appColorBlack"
                 android:padding="2dp"
@@ -189,7 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="@string/name_text"
+                android:text="@string/name_text1"
                 android:textSize="14sp"
                 android:textColor="@color/appColorBlack"
                 android:padding="2dp"
@@ -219,7 +219,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="@string/mobile_no_text"
+                android:text="@string/mobile_no1"
                 android:textSize="14sp"
                 android:textColor="@color/appColorBlack"
                 android:padding="2dp"
