--- a/app/src/main/res/layout/fragment_symptoms.xml
+++ b/app/src/main/res/layout/fragment_symptoms.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="18dp"
         android:orientation="vertical"
         android:overScrollMode="never"
         android:isScrollContainer="true"
@@ -20,232 +20,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:scrollbars="none"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/innerLayoutSymptomsFrag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusableInTouchMode="true"
-            >
+            android:focusableInTouchMode="true">
 
-        <TextView
-            android:id="@+id/tvLabelSymptomsFrag"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Symptoms"
-            android:fontFamily="@font/myriad_pro_bold"
-            android:textSize="28sp"
-            android:textAllCaps="true"
-            android:textAlignment="center"
-            android:textColor="@color/appColorGreen"
-            android:layout_marginTop="35dp"
-            android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
-            <com.sapphire.HealthAssessmentPDMA.helper.ExpandableHeightGridView
-                android:id="@+id/gridView_symptomsFrag"
+            <ImageView
+                android:id="@+id/imageView_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
-                android:paddingBottom="20dp"
-                android:clipToPadding="false"
-                android:numColumns="4"
-                android:clipChildren="false"
-                android:outlineProvider="bounds"
-                android:verticalSpacing="15dp"
-                android:horizontalSpacing="8dp"
-                app:layout_constraintDimensionRatio="w,16:9"
-                app:layout_constraintEnd_toEndOf="@+id/tvLabelSymptomsFrag"
-                app:layout_constraintRight_toRightOf="@+id/tvLabelSymptomsFrag"
-                app:layout_constraintLeft_toLeftOf="@+id/tvLabelSymptomsFrag"
-                app:layout_constraintStart_toStartOf="@+id/tvLabelSymptomsFrag"
-                app:layout_constraintTop_toBottomOf="@+id/tvLabelSymptomsFrag"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintStart_toStartOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintLeft_toLeftOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintEnd_toEndOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintRight_toRightOf="@+id/innerLayoutSymptomsFrag"
+                android:src="@mipmap/symptoms_header" />
 
-                />
-
-            <TextView
-                android:id="@+id/tvInformationSymptomsFrag"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_SymptomsFrag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="If you traveled to/from china within the last 14 days and have any of the above symptoms, you should:"
-                android:textSize="18sp"
-                android:textColor="@color/darkGreenColor"
-                android:fontFamily="@font/myriad_pro_regular"
-                android:layout_marginEnd="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/gridView_symptomsFrag"
-                app:layout_constraintRight_toRightOf="@+id/gridView_symptomsFrag"
-                app:layout_constraintLeft_toLeftOf="@+id/gridView_symptomsFrag"
-                app:layout_constraintStart_toStartOf="@+id/gridView_symptomsFrag"
-                app:layout_constraintTop_toBottomOf="@+id/gridView_symptomsFrag"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/imageView_header"
+                app:layout_constraintStart_toStartOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintLeft_toLeftOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintEnd_toEndOf="@+id/innerLayoutSymptomsFrag"
+                app:layout_constraintRight_toRightOf="@+id/innerLayoutSymptomsFrag"
+                android:overScrollMode="never"
+                android:isScrollContainer="false"
+                android:scrollbars="none"
+                android:layout_marginTop="20dp"
+               tools:listitem="@layout/symptoms_recyclerview_layout"
 
-            <TextView
-                android:id="@+id/tvPrecautionPoint1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stay at home and avoid contact with others."
-                android:textSize="18sp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:textColor="@color/appColorBlack"
-                android:fontFamily="@font/myriad_pro_regular"
-                android:layout_marginTop="36dp"
-                android:drawableLeft="@drawable/ic_warning_red_colored"
-                android:drawableStart="@drawable/ic_warning_red_colored"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                app:layout_constraintLeft_toLeftOf="@+id/tvInformationSymptomsFrag"
-                app:layout_constraintStart_toStartOf="@+id/tvInformationSymptomsFrag"
-                app:layout_constraintTop_toBottomOf="@+id/tvInformationSymptomsFrag"
-                />
-            <View
-                android:id="@+id/viewLinePoint1"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="10dp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:background="@drawable/line_gradient"
-                app:layout_constraintEnd_toEndOf="@+id/tvPrecautionPoint1"
-                app:layout_constraintRight_toRightOf="@+id/tvPrecautionPoint1"
-                app:layout_constraintLeft_toLeftOf="@+id/tvPrecautionPoint1"
-                app:layout_constraintStart_toStartOf="@+id/tvPrecautionPoint1"
-                app:layout_constraintTop_toBottomOf="@+id/tvPrecautionPoint1"
+
 
                 />
-
-            <TextView
-                android:id="@+id/tvPrecautionPoint2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Immediately inform health authorities/health facilities."
-                android:textSize="18sp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:textColor="@color/appColorBlack"
-                android:fontFamily="@font/myriad_pro_regular"
-                android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/ic_warning_red_colored"
-                android:drawableStart="@drawable/ic_warning_red_colored"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                app:layout_constraintLeft_toLeftOf="@+id/viewLinePoint1"
-                app:layout_constraintStart_toStartOf="@+id/viewLinePoint1"
-                app:layout_constraintTop_toBottomOf="@+id/viewLinePoint1"
-
-                />
-            <View
-                android:id="@+id/viewLinePoint2"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="10dp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:background="@drawable/line_gradient"
-                app:layout_constraintEnd_toEndOf="@+id/tvPrecautionPoint2"
-                app:layout_constraintRight_toRightOf="@+id/tvPrecautionPoint2"
-                app:layout_constraintLeft_toLeftOf="@+id/tvPrecautionPoint2"
-                app:layout_constraintStart_toStartOf="@+id/tvPrecautionPoint2"
-                app:layout_constraintTop_toBottomOf="@+id/tvPrecautionPoint2"
-
-                />
-            <TextView
-                android:id="@+id/tvPrecautionPoint3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cover your mouth and nose with a tissue or sleeve cloth when coughing or sneezing (not with hand)."
-                android:textSize="18sp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:textColor="@color/appColorBlack"
-                android:fontFamily="@font/myriad_pro_regular"
-                android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/ic_warning_red_colored"
-                android:drawableStart="@drawable/ic_warning_red_colored"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                app:layout_constraintLeft_toLeftOf="@+id/viewLinePoint2"
-                app:layout_constraintStart_toStartOf="@+id/viewLinePoint2"
-                app:layout_constraintTop_toBottomOf="@+id/viewLinePoint2"
-
-                />
-            <View
-                android:id="@+id/viewLinePoint3"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="10dp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:background="@drawable/line_gradient"
-                app:layout_constraintLeft_toLeftOf="@+id/tvPrecautionPoint3"
-                app:layout_constraintStart_toStartOf="@+id/tvPrecautionPoint3"
-                app:layout_constraintTop_toBottomOf="@+id/tvPrecautionPoint3"
-
-                />
-            <TextView
-                android:id="@+id/tvPrecautionPoint4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:text="Wash hands often with soap and water for at least 20 seconds, or use a hand cleaning lotion."
-                android:textSize="18sp"
-                android:textColor="@color/appColorBlack"
-                android:fontFamily="@font/myriad_pro_regular"
-                android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/ic_warning_red_colored"
-                android:drawableStart="@drawable/ic_warning_red_colored"
-                android:drawablePadding="16dp"
-                android:gravity="center_vertical"
-                app:layout_constraintLeft_toLeftOf="@+id/viewLinePoint3"
-                app:layout_constraintStart_toStartOf="@+id/viewLinePoint3"
-                app:layout_constraintTop_toBottomOf="@+id/viewLinePoint3"
-
-                />
-            <View
-                android:id="@+id/viewLinePoint4"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="10dp"
-                android:paddingEnd="24dp"
-                android:paddingRight="24dp"
-                android:background="@drawable/line_gradient"
-                app:layout_constraintLeft_toLeftOf="@+id/tvPrecautionPoint4"
-                app:layout_constraintStart_toStartOf="@+id/tvPrecautionPoint4"
-                app:layout_constraintTop_toBottomOf="@+id/tvPrecautionPoint4"
-
-                />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                app:layout_constraintTop_toBottomOf="@id/viewLinePoint4"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
