--- a/app/src/main/res/layout/prevention_rv_adapter_item.xml
+++ b/app/src/main/res/layout/prevention_rv_adapter_item.xml
@@ -13,10 +13,18 @@
         android:id="@+id/imgV_icon_prevention_rv_adapter_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/prevention_screen_icon_1"
+        android:src="@drawable/ic_dot_bullet"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="visible"
+        android:layout_gravity="top"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="5dp"
         />
 
     <TextView
@@ -25,12 +33,21 @@
         android:layout_height="wrap_content"
         android:text="@string/dispose_tissue_text"
         android:textColor="@color/appColorBlack"
-        android:textSize="9sp"
+        android:textSize="18sp"
+        android:drawablePadding="5dp"
         android:fontFamily="@font/notonastaliqurdu_regular"
-        android:gravity="right"
         android:includeFontPadding="false"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:layout_gravity="top"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
