--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">45.55.149.164</domain>
+        <domain includeSubdomains="true">pdmatest.sindhhealth.gov.pk</domain>
+        <domain includeSubdomains="true">pdma.sindhhealth.gov.pk</domain>
     </domain-config>
 </network-security-config>
