--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="end"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     >
 
     <include
@@ -35,8 +37,6 @@
             android:layout_marginTop="40dp"
             android:overScrollMode="never"
             />
-
-
     </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
