--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -65,7 +65,7 @@
         app:layout_constraintRight_toRightOf="@+id/imgViewLogoSignIn"
         app:layout_constraintTop_toBottomOf="@+id/imgViewLogoSignIn"
         android:fontFamily="@font/myriad_pro_bold"
-        />
+        android:gravity="center_horizontal" />
 
     <View
         android:id="@+id/viewLineSepratorSignIn"
@@ -137,7 +137,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 >
 
-                <EditText
+                <com.sapphire.HealthAssessmentPDMA.helper.CustomEdittextMobile
                     android:id="@+id/edMobileNumberSignIn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -153,6 +153,11 @@
                     android:paddingStart="10dp"
                     android:paddingLeft="10dp"
                     android:fontFamily="@font/myriad_pro_regular"
+                    android:longClickable="false"
+                    android:contextClickable="false"
+                    android:textIsSelectable="false"
+                    app:isCopyPasteDisabled="true"
+                    android:imeOptions="actionDone"
                     />
 
             </androidx.cardview.widget.CardView>
