--- a/app/src/main/res/layout/custom_navigation_listview_sindhi_urdu.xml
+++ b/app/src/main/res/layout/custom_navigation_listview_sindhi_urdu.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="end">
 
 
-
     <TextView
         android:id="@+id/txtMenu"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="5dp"
+        android:fontFamily="@font/myriad_pro_regular"
         android:paddingStart="5dp"
-        android:paddingRight="5dp"
-        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
         android:paddingTop="20dp"
-        android:text="Motor Vehicle Tax"
-        android:textAlignment="viewStart"
+        android:paddingEnd="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="20dp"
+        android:gravity="right"
+        android:text="@string/what_is_coronavirus_sindhi"
+        android:textAlignment="inherit"
         android:textColor="@color/appColorBlack"
         android:textSize="17sp"
-        android:layout_gravity="start"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/imgMenu"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/imgMenu"
-        android:fontFamily="@font/myriad_pro_regular"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgMenu"
@@ -39,12 +42,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="20dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
