--- a/app/src/main/res/layout/custom_spinner_item_sindhi.xml
+++ b/app/src/main/res/layout/custom_spinner_item_sindhi.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="جنس"
-    android:textSize="18sp"
+    android:textSize="24sp"
     android:textColor="@color/appColorBlack"
     android:includeFontPadding="false"
-    android:paddingTop="0dp"
-    android:paddingBottom="15dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
     android:paddingStart="10dp"
     android:paddingLeft="10dp"
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
-    android:fontFamily="@font/sindhi_fonts"
+    android:fontFamily="@font/font_sindhi_new"
     />
