--- a/app/src/main/res/layout/fragment_other_user_information.xml
+++ b/app/src/main/res/layout/fragment_other_user_information.xml
@@ -217,7 +217,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 >
 
-                <EditText
+                <com.sapphire.HealthAssessmentPDMA.helper.CustomEditText
                     android:id="@+id/edMobileNumber_OtherUIFrag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -233,6 +233,8 @@
                     android:paddingStart="10dp"
                     android:paddingLeft="10dp"
                     android:fontFamily="@font/myriad_pro_regular"
+                    android:longClickable="false"
+                    android:contextClickable="false"
                     />
 
             </androidx.cardview.widget.CardView>
@@ -312,8 +314,8 @@
                             android:maxLines="1"
                             android:inputType="number"
                             android:maxLength="3"
-                            android:paddingTop="11.3dp"
-                            android:paddingBottom="11.3dp"
+                            android:paddingTop="12.3dp"
+                            android:paddingBottom="12.3dp"
                             android:paddingStart="10dp"
                             android:paddingLeft="10dp"
                             android:fontFamily="@font/myriad_pro_regular"
@@ -377,8 +379,6 @@
                         <Spinner
                             android:id="@+id/spGender"
                             android:layout_width="match_parent"
-                            android:paddingTop="3dp"
-                            android:paddingBottom="3dp"
                             android:layout_height="wrap_content"
                             android:background="@drawable/spinner_bg"
                             tools:listitem="@layout/custom_spinner_item"
@@ -455,8 +455,6 @@
                             android:id="@+id/spin_dist_OtherUIFrag"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingTop="4dp"
-                            android:paddingBottom="4dp"
                             android:background="@drawable/spinner_bg"
                             tools:listitem="@layout/custom_spinner_item"
                             />
@@ -516,8 +514,6 @@
                             android:id="@+id/spin_tehsil_OtherUIFrag"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingTop="4dp"
-                            android:paddingBottom="4dp"
                             android:background="@drawable/spinner_bg"
                             tools:listitem="@layout/custom_spinner_item"
                             />
