--- a/app/src/main/res/layout/fragment_prevention_eng.xml
+++ b/app/src/main/res/layout/fragment_prevention_eng.xml
@@ -26,11 +26,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PREVENTION"
-                android:textColor="@color/app_color_green"
+                android:textColor="@color/appColorWhite"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:gravity="center"
                 android:layout_marginTop="40dp"
+                android:padding="10dp"
+                android:background="@color/appColorBlack"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
