--- a/app/src/main/res/layout/second_splash_screen.xml
+++ b/app/src/main/res/layout/second_splash_screen.xml
@@ -104,24 +104,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/second_splash_screen_text"
-            android:textSize="28sp"
+            android:textSize="38sp"
             android:textColor="@color/appColorBlack"
             android:textAlignment="center"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="60dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_line_separator_lang_opt_frag"
-            app:layout_constraintVertical_bias="0.56"
+            app:layout_constraintTop_toBottomOf="@id/view_line_separator_lang_opt_frag"
             android:fontFamily="@font/myriad_pro_regular"
-            android:gravity="center_horizontal" />
+            android:gravity="center"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
